# angular-mdc-web

./: .bazelrc  .gitattributes  .gitignore  .npmignore  .stylelint-config.yaml  .stylelintrc.yaml  .travis.yml  0-es2015.9657d40c9b7806dc5219.js  0-es5.9657d40c9b7806dc5219.js  1-es2015.18e337a4e0e2f6153144.js  1-es2015.1f901737b991ab63b33e.js  1-es2015.534ada9d3717812b5629.js  1-es2015.54e04e2a27560b42b5a0.js  1-es2015.f46fedd6a2e9f24a7999.js  1-es5.18e337a4e0e2f6153144.js  1-es5.1f901737b991ab63b33e.js  1-es5.377ab2280dcdd2d27de2.js  1-es5.534ada9d3717812b5629.js  1-es5.54e04e2a27560b42b5a0.js  1-es5.f46fedd6a2e9f24a7999.js  10-es2015.6ec636ac884f6ba23850.js  10-es2015.c218699cda804801aa65.js  10-es2015.c950db49f31fb80de5b3.js  10-es2015.ce31b74acedbd552cd40.js  10-es2015.ef1744b9680a05bbc573.js  10-es2015.ff050b2e0a865c850bc0.js  10-es5.104ffd771d6ae196b3af.js  10-es5.449b8fd11c14a2965e6c.js  10-es5.64b7c77e858d2879f89c.js  10-es5.6ec636ac884f6ba23850.js  10-es5.c950db49f31fb80de5b3.js  10-es5.ce31b74acedbd552cd40.js  10-es5.ef1744b9680a05bbc573.js  11-es2015.1a325162ba9033c71092.js  11-es2015.3624b375ed782e6c7805.js  11-es2015.a9bb67c301c393d35967.js  11-es2015.d6f09707c014f469b5cf.js  11-es2015.f0599d75566bebbc69de.js  11-es2015.f45606824d680bbb4275.js  11-es5.1751453fc6a732a7189a.js  (+726 more)
.github/: bug_report.md
config/: rollup-demo.config.js  rollup-es2015.config.js  rollup-es5.config.js  rollup-umd.config.js  rollup.config.js
demo-app/: README.md  package.json  tsconfig.json  webpack.config.js
demos/: angular.json  app-layout.html  app-layout.ts  app.component.ts  (+11 more)
(+1446 files in other folders)
