package(default_visibility = ["//visibility:public"])

load("//:rollup-globals.bzl", "ROLLUP_GLOBALS")
load("//packages:config.bzl", "MDC_ENTRYPOINTS")

exports_files([
    "LICENSE",
    "README.md",
])

genrule(
    name = "rollup_globals",
    outs = ["rollup_globals.json"],
    cmd = "echo '%s' > $@" % ROLLUP_GLOBALS,
)

entryPoints = ["web/%s" % e for e in MDC_ENTRYPOINTS]

genrule(
    name = "entry_points_manifest",
    outs = ["entry_points_manifest.json"],
    cmd = "echo '%s' > $@" % entryPoints,
)
